styles/base.css
/*** HEADER element ***/
header{
    display:grid;
    grid-template-columns: 24px auto 44px;
    padding: 15px;
    border-bottom: solid 1px #ddd;
    column-gap: 8px;
    align-items: center;
}

header img{
    display:block;
    width:100%;
    height:auto;
}

header span{
    font-size: 1.2rem;
    color:#3D405B;
    font-family: "Playwrite GB J", cursive;
}

/*** HAMBURGER Navigation ***/
.hamburger{
    background: none;
    border:none;
    color:#3D405B;
    cursor:pointer;
    touch-action: manipulation;
}

.hamburger::after{
    content:"\2630";
    font-size:2rem;
}

.hamburger.show::after{
    content:"\00D7";
}

/** NAVIGATION element **/
.navigation{
    width: 100%;
    border-bottom: 1px solid #ddd;
    background-color: whitesmoke;
    display: none;
}

.navigation.show{
    display: block;
}

.navigation ul{
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-block: 0px;
    padding-inline-start: 0px;
    list-style-type: none;
    font-family: "Playwrite GB J", cursive;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    gap: 10px;
}

.navigation ul li{
    width: 100%;
    padding: 10px;
    font-size: 18px;
    text-align: center;
    cursor: pointer;
}

.navigation ul li:hover{
    background-color: gainsboro;
}

li a{
    text-decoration: none;
    color:#3D405B;
}

/** MAIN **/
main{
    margin: 0 40px;
    display: block;
    padding-bottom: 20px;
}

main h1{
    margin-bottom: 5px;
}

.student-photo picture{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.student-photo picture img{
    max-width: 100%;
    height: auto;
}

.certificate-courses{
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.certificate-courses button{
    border: 1px solid #ddd;
    background-color: white;
    cursor: pointer;
    font-size: 18px;
    padding: 10px;
}

.certificate-courses button:hover{
    background-color: whitesmoke;
}

.certificate-courses button.active{
    background-color: black;
    color: white;
}

.certificate-courses span{
    width: 100%;
    text-align: center;
}

#courses{
    list-style: none;
    display: flex;
    gap: 10px;
    margin: 0 40px;
    flex-direction: column;
    font-size: 18px;
    margin: 0px;
    padding: 0px;
}

#courses li{
    padding: 10px;
}

#courses li.class.completed{
    border: 1px solid green;
    color: black;
    font-weight: bold;
}

#courses li.class.current-course{
    border: 1px solid #ddd;
    color:black;
    font-weight: bold;
}

main section p{
    padding: 10px;
    background-color: whitesmoke;
}

main section h2{
    padding: 10px;
    border: 1px solid #ddd;
    text-align: center;
}


/** FOOTER **/
footer{
    display: block;
    border-top: 1px solid #ddd;
}

.social-media{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 10px;
}

.social-media ul{
    width: 80%;
    margin:10px 0;
    padding:0;
    list-style-type: none;
    display: flex;
}

.social-media ul li{
    margin: 0;
    padding:10px;
    text-align: center;
    flex: 1 1 100%;
    cursor:pointer;
}

.social-media ul li:hover{
    background-color: whitesmoke;
}

.social-media ul li a{
    text-decoration: none;
    color: #3D405B;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.site-info{
    background-color: whitesmoke;
    display: block;
    text-align: center;
    padding: 10px;
}

.site-info p{
    text-align: center;
}

